--- a/src/styles/Styles.module.css
+++ b/src/styles/Styles.module.css
@@ -458,6 +458,7 @@
     }
 
     .navbar ul {
+        gap: 0.2em;
         flex-wrap: wrap;
         justify-content: center;
         text-align: center;
