--- a/src/styles/Styles.module.css
+++ b/src/styles/Styles.module.css
@@ -635,6 +635,7 @@
         padding: 0;
         text-align: center;
         justify-content: center;
+        text-align: left;
     }
 
     .listMenuItems ul {
